--- a/Expert.WebShop.Zavrsni/Shared/MainLayout.razor
+++ b/Expert.WebShop.Zavrsni/Shared/MainLayout.razor
@@ -1,13 +1,16 @@
 ﻿@inherits LayoutComponentBase
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+
 
 <div class="page">
     <div class="sidebar">
         <NavMenu />
     </div>
-
+   
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="\Areas\Admin\login" target="_blank">Login</a>
         </div>
 
         <article class="content px-4">
