--- a/Expert.WebShop.Zavrsni/Shared/NavMenu.razor
+++ b/Expert.WebShop.Zavrsni/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Expert.WebShop.Zavrsni.Models;
+@inject HttpClient httpClient
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Expert.WebShop.Zavrsni</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -14,16 +16,16 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
+        @foreach(var item in categories)
+        {
+            var link = $"/category/{item.Id}/{item.CategoryName}";
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="@link" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span>@item.CategoryName
+                </NavLink>
+            </div>
+        }
+        
     </nav>
 </div>
 
@@ -31,9 +33,20 @@
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private List<Category> categories = new List<Category>();
 
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
     }
+    protected override async Task OnInitializedAsync()
+    {
+        var response = await httpClient.GetAsync("https://expertshopapi.azurewebsites.net/api/Categories");
+        if (response.IsSuccessStatusCode)
+        {
+            categories = await response.Content.ReadFromJsonAsync<List<Category>>();
+        }
+       
+    }
+
 }
