--- a/Expert.WebShop.Zavrsni/_Imports.razor
+++ b/Expert.WebShop.Zavrsni/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Expert.WebShop.Zavrsni
 @using Expert.WebShop.Zavrsni.Shared
+@using Microsoft.AspNetCore.Authorization
+
