--- a/Expert.WebShop.Zavrsni/Shared/MainLayout.razor
+++ b/Expert.WebShop.Zavrsni/Shared/MainLayout.razor
@@ -1,6 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@using Microsoft.AspNetCore.Authorization
-@inject IAuthorizationService AuthorizationService
+
 
 
 <div class="page">
@@ -10,7 +9,7 @@
    
     <main>
         <div class="top-row px-4">
-            <a href="\Areas\Admin\login" target="_blank">Login</a>
+            <a href="login">Login</a>
         </div>
 
         <article class="content px-4">
