--- a/Expert.WebShop.Zavrsni/Pages/Index.razor
+++ b/Expert.WebShop.Zavrsni/Pages/Index.razor
@@ -1,23 +1,40 @@
 ﻿@page "/"
+@using Expert.WebShop.Zavrsni.Models;
+@inject HttpClient httpClient
 
 <PageTitle>WebShop | Expert</PageTitle>
 
 <h1>Dobrodošli u WebShop</h1>
 
 Naši najnoviji proizvodi
-@*<div>
+<div>
 @foreach(var item in products){
 <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="@item.ImagePath" alt="Card image cap">
+    <img class="card-img-top" src="@item.ImagePath" alt="card image cap">
     <div class="card-body">
         <h5 class="card-title">@item.ProductName</h5>
         <p class="card-text">@item.ProductDescription</p>
-        <a href="#" class="btn btn-primary">Details</a>
+        <a href="#" class="btn btn-primary">Buy</a>
     </div>
 </div>
 }
-</div>*@
+</div>
 
 @code{
+    private List<Product> products = new List<Product>();
 
+    protected override async Task OnInitializedAsync()
+    {
+        products = await GetProducts();
+    }
+
+    private async Task<List<Product>> GetProducts()
+    {
+        var result = await httpClient.GetAsync($"https://expertshopapi.azurewebsites.net/api/Products");
+        if (result.IsSuccessStatusCode)
+        {
+            products = await result.Content.ReadFromJsonAsync<List<Product>>();
+        }
+        return products;
+    }
 }
