--- a/Expert.WebShop.Zavrsni/Pages/Index.razor
+++ b/Expert.WebShop.Zavrsni/Pages/Index.razor
@@ -7,18 +7,25 @@
 <h1>Dobrodošli u WebShop</h1>
 
 Naši najnoviji proizvodi
-<div>
-@foreach(var item in products){
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="@item.ImagePath" alt="card image cap">
-    <div class="card-body">
-        <h5 class="card-title">@item.ProductName</h5>
-        <p class="card-text">@item.ProductDescription</p>
-        <a href="#" class="btn btn-primary">Buy</a>
+
+<div class="container text-center">
+    <div class="row">
+            @foreach (var item in products)
+            {
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="@item.ImagePath" alt="card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">@item.ProductName</h5>
+                        <p class="card-text">@item.ProductDescription</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
+            }
     </div>
 </div>
-}
-</div>
+
 
 @code{
     private List<Product> products = new List<Product>();
