--- a/Expert.WebShop.Zavrsni/Shared/NavMenu.razor
+++ b/Expert.WebShop.Zavrsni/Shared/NavMenu.razor
@@ -16,12 +16,19 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="administration-dash" Match="NavLinkMatch.All">
+                <span class="oi oi-account-login" aria-hidden="true"></span> Administracija
+            </NavLink>
+        </div>
+
         @foreach(var item in categories)
         {
             var link = $"/category/{item.Id}/{item.CategoryName}";
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="@link" Match="NavLinkMatch.All">
-                    <span class="oi oi-home" aria-hidden="true"></span>@item.CategoryName
+                    <span class="oi oi-info" aria-hidden="true"></span>@item.CategoryName
                 </NavLink>
             </div>
         }
