Onclick Succes message.

--- a/Expert.WebShop.Zavrsni/Areas/Admin/Pages/Administration.razor
+++ b/Expert.WebShop.Zavrsni/Areas/Admin/Pages/Administration.razor
@@ -11,5 +11,7 @@
 
 
 @code {
-
+    //// <summary>
+    /// Razmotriti da se ubaci Tabs za administraciju proizvoda sa linka: https://blazor.radzen.com/tabs
+    /// </summary>
 }
