--- a/Expert.WebShop.Zavrsni/Shared/MainLayout.razor
+++ b/Expert.WebShop.Zavrsni/Shared/MainLayout.razor
@@ -8,6 +8,7 @@
     </div>
    
     <main>
+   
         <div class="top-row px-4">
             <a href="login">Login</a>
         </div>
@@ -17,3 +18,8 @@
         </article>
     </main>
 </div>
+
+<RadzenDialog />
+<RadzenNotification />
+<RadzenContextMenu />
+<RadzenTooltip />
