--- a/Expert.WebShop.Zavrsni/_Imports.razor
+++ b/Expert.WebShop.Zavrsni/_Imports.razor
@@ -9,4 +9,5 @@
 @using Expert.WebShop.Zavrsni
 @using Expert.WebShop.Zavrsni.Shared
 @using Microsoft.AspNetCore.Authorization
-
+@using Radzen
+@using Radzen.Blazor
