--- a/Expert.WebShop.Zavrsni/Shared/NavMenu.razor
+++ b/Expert.WebShop.Zavrsni/Shared/NavMenu.razor
@@ -1,5 +1,6 @@
 ﻿@using Expert.WebShop.Zavrsni.Models;
 @inject HttpClient httpClient
+
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Expert.WebShop.Zavrsni</a>
@@ -20,6 +21,12 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="administration-dash" Match="NavLinkMatch.All">
                 <span class="oi oi-account-login" aria-hidden="true"></span> Administracija
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="cart" Match="NavLinkMatch.All">
+                <span class="oi oi-account-login" aria-hidden="true"></span> Moja košarica
             </NavLink>
         </div>
 
