--- a/Expert.WebShop.Zavrsni/_Imports.razor
+++ b/Expert.WebShop.Zavrsni/_Imports.razor
@@ -6,8 +6,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Expert.WebShop.Zavrsni
-@using Expert.WebShop.Zavrsni.Shared
 @using Microsoft.AspNetCore.Authorization
 @using Radzen
 @using Radzen.Blazor
+@using Expert.WebShop.Zavrsni
+@using Expert.WebShop.Zavrsni.Models
+@using Expert.WebShop.Zavrsni.Shared
