--- a/Expert.WebShop.Zavrsni/Areas/Admin/Pages/Administration.razor
+++ b/Expert.WebShop.Zavrsni/Areas/Admin/Pages/Administration.razor
@@ -1,13 +1,13 @@
 ﻿@inject HttpClient httpClient
 @inject NavigationManager navManager
-@page "/administration-dash"
+@page "/Admin/administration-dash"
 
 <h3>Administracija proizvoda i kategorija</h3>
 
-<a href="">Lista kategorija</a>
-<a href="">Dodaj novu kategoriju</a>
-<a href="">Lista proizvoda</a>
-<a href="">Dodaj novi proizvod</a>
+<a href="/Admin/lista-kategorija">Lista kategorija</a>
+<a href="/Admin/nova-kategorija">Dodaj novu kategoriju</a>
+<a href="/Admin/lista-proizvoda">Lista proizvoda</a>
+<a href="/Admin/novi-proizvod">Dodaj novi proizvod</a>
 
 
 @code {
