--- a/Expert.WebShop.Zavrsni/Shared/MainLayout.razor
+++ b/Expert.WebShop.Zavrsni/Shared/MainLayout.razor
@@ -3,14 +3,15 @@
 
 
 <div class="page">
-    <div class="sidebar">
+    <div style="background-color:red;" class="sidebar">
         <NavMenu />
     </div>
    
     <main>
    
         <div class="top-row px-4">
-            <a href="login">Login</a>
+            <a href="/cart" class="fa-solid fa-cart-shopping" style="color=none;"></a>
+            
         </div>
 
         <article class="content px-4">
