--- a/Expert.WebShop.Zavrsni/Shared/NavMenu.razor
+++ b/Expert.WebShop.Zavrsni/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Expert.WebShop.Zavrsni</a>
+        <a class="navbar-brand" href="">Paško Baričić</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,7 +19,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="administration-dash" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="Admin/administration-dash" Match="NavLinkMatch.All">
                 <span class="oi oi-account-login" aria-hidden="true"></span> Administracija
             </NavLink>
         </div>
