--- a/Expert.WebShop.Zavrsni/Areas/Admin/Pages/CategoryList.razor
+++ b/Expert.WebShop.Zavrsni/Areas/Admin/Pages/CategoryList.razor
@@ -24,7 +24,7 @@
                     </div>
                     <div class="mojiButtoni">
                         <button type="button" @onclick="()=>EditCategory(item.Id)" class="btn btn-primary">Uredi</button>
-                        <button type="button" @*@onclick="()=>DeleteCategory(item.Id)" *@ class="btn btn-danger">Obriši kategoriju</button>
+                        <button type="button" @onclick="()=>DeleteCategory(item.Id)"  class="btn btn-danger">Obriši kategoriju</button>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,6 @@
         }
     </div>
 </div>
-
 
 
 @code {
@@ -59,10 +58,6 @@
 
     private async Task DeleteCategory(int id)
     {
-        var result = await httpClient.DeleteAsync($"{Constants.baseUrl}/Categories/{id}");
-        if (result.IsSuccessStatusCode)
-        {
-            navManager.NavigateTo("/Admin/lista-kategorija");
-        }
+        navManager.NavigateTo($"/Admin/brisanje-kategorije/{id}");
     }
 }
