--- a/Expert.WebShop.Zavrsni/Pages/Index.razor
+++ b/Expert.WebShop.Zavrsni/Pages/Index.razor
@@ -1,56 +1,54 @@
 ﻿@page "/"
 @using Expert.WebShop.Zavrsni.Models;
 @inject HttpClient httpClient
-@inject NotificationService NotificationService
 @inject NavigationManager navManager
 @inject ShoppingCartInMemory shoppingCart
 
 <PageTitle>WebShop | Expert</PageTitle>
 
-<h1>Dobrodošli u WebShop</h1>
+<h1 style="text-align:center">Dobrodošli u WebShop</h1>
 
-Naši najnoviji proizvodi
+<div class="card-group">
 <div class="container text-center">
     <div class="row">
-            @foreach (var item in products)
+            @foreach (var item in cats)
             {
             <div class="col">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="@item.ImagePath" alt="card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">@item.ProductName</h5>
-                        <p class="card-text">@item.ProductDescription</p>
-                        <RadzenButton Click="(()=> {shoppingCart.AddToShoppingCart(item.Id); ShowNotification(item.ProductName); })" Text="Dodaj u košaricu"></RadzenButton>
+                        <h5 class="card-title">@item.CategoryName</h5>
+                        <p class="card-text">@item.CategoryDescription</p>
+                        <RadzenButton Click="()=>navigate(item.Id, item.CategoryName)" Text="Otvori kategoriju"></RadzenButton>
                     </div>
                 </div>
             </div>
             }
     </div>
 </div>
-
+</div>
 
 @code{
-    private List<Product> products = new List<Product>();
+    private List<Category> cats = new List<Category>();
 
     protected override async Task OnInitializedAsync()
     {
-        products = await GetProducts();
+        cats = await GetProducts();
     }
 
-    private async Task<List<Product>> GetProducts()
+    private async Task<List<Category>> GetProducts()
     {
-        var result = await httpClient.GetAsync($"https://expertshopapi.azurewebsites.net/api/Products");
+        var result = await httpClient.GetAsync($"https://expertshopapi.azurewebsites.net/api/Categories");
         if (result.IsSuccessStatusCode)
         {
-            products = await result.Content.ReadFromJsonAsync<List<Product>>();
+            cats = await result.Content.ReadFromJsonAsync<List<Category>>();
         }
-        return products;
+        return cats;
     }
 
-
-    void ShowNotification(string productName)
+    private async Task navigate(int id, string categoryName)
     {
-        var message = new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Dodano u košaricu", Detail = $"Uspješno ste dodali proizvod {productName} u košaricu!", Duration = 6000 };
-        NotificationService.Notify(message);  
+        navManager.NavigateTo($"/category/{id}/{categoryName}");
     }
+
 }
