--- a/Expert.WebShop.Zavrsni/Pages/Index.razor
+++ b/Expert.WebShop.Zavrsni/Pages/Index.razor
@@ -30,7 +30,7 @@
 
 @code{
     private List<Category> cats = new List<Category>();
-
+    bool IsLoadError = false;
     protected override async Task OnInitializedAsync()
     {
         cats = await GetProducts();
