--- a/Expert.WebShop.Zavrsni/Pages/Details.razor
+++ b/Expert.WebShop.Zavrsni/Pages/Details.razor
@@ -2,6 +2,9 @@
 @inject HttpClient httpClient
 @inject NavigationManager navManager
 @using Expert.WebShop.Zavrsni.Models
+@inject ShoppingCartInMemory shoppingCart
+@inject NotificationService NotificationService
+
 
 <PageTitle>Detalji proizvoda | Expert</PageTitle>
 @if (IsLoadError)
@@ -25,12 +28,11 @@
                 {
                     <p class="card-text"><small class="text-body-secondary">Popust: @prod.Discount %</small></p>  
                 }
-               
+                <RadzenButton Click="(()=> {shoppingCart.AddToShoppingCart(prod.Id); ShowNotification(prod.ProductName); })" Text="Dodaj u košaricu"></RadzenButton>
             </div>
         </div>
     </div>
 </div>
-
 
 
 
@@ -56,4 +58,11 @@
             StateHasChanged();
         }
     }
+
+    void ShowNotification(string productName)
+    {
+        var message = new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Dodano u košaricu", Detail = $"Uspješno ste dodali proizvod {productName} u košaricu!", Duration = 5000 };
+        NotificationService.Notify(message);
+    }
+    //Razmotriti da se kartica sa detaljima postavi u sredinu ekrana
 }
